--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The real source of humanity’s troubles</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 25.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1201,7 +1201,7 @@
                     <div class="video-info">
                         <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2272,7 +2272,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 05.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2580,7 +2580,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 29.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 25.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5809,7 +5809,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 14</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6495,7 +6495,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 05.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6660,7 +6660,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 29.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>The real source of humanity’s troubles</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8206,7 +8206,7 @@
                         <div class="video-info">
                             <h3>A Simple Practice for Clarity & Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
